@@ -53,6 +53,9 @@ Library
 - Issue #6050: Don't fail extracting a directory from a zipfile if
   the directory already exists.
 
+- collections.namedtuple() was not working with the following field
+  names:  cls, self, tuple, itemgetter, and property.
+
 - Issue #1309352: fcntl now converts its third arguments to a C `long` rather
   than an int, which makes some operations possible under 64-bit Linux (e.g.
   DN_MULTISHOT with F_NOTIFY).
